--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/kustomization.yaml
@@ -5,3 +5,8 @@ kind: Kustomization
 namespace: kube-system
 resources:
   - helm-release.yaml
+  - values.yaml
+configMapGenerator:
+  - name: cilium-helm-values
+    files:
+      - values.yaml=./values.yaml
