--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
@@ -25,97 +25,6 @@ spec:
       remediateLastFailure: true
   uninstall:
     keepHistory: false
-  values:
-    autoDirectNodeRoutes: false ## true creates error: "auto-direct-node-routes cannot be used with tunneling."
-    # bandwidthManager:
-    #   enabled: true
-    #   bbr: true
-    # bpf:
-    #   masquerade: true
-    bgp:
-      enabled: false
-    containerRuntime:
-      integration: containerd
-    endpointRoutes:
-      enabled: true
-      # hubble:
-      #   enabled: true
-      #   metrics:
-      #     enabled:
-      #       - dns:query;ignoreAAAA
-      #       - drop
-      #       - tcp
-      #       - flow
-      #       - port-distribution
-      #       - icmp
-      #       - http
-
-      # serviceMonitor:
-      #   enabled: false
-      # dashboards:
-      #   enabled: false
-      #   annotations:
-      #     grafana_folder: Cilium
-      relay:
-        enabled: true
-        rollOutPods: true
-    ipam:
-      mode: kubernetes
-    hostFirewall:
-      enabled: true
-    hubble:
-      relay:
-        enabled: true
-      ui:
-        enabled: true
-    kubeProxyReplacement: true
-    # loadBalancer:
-    #   algorithm: maglev
-    #   mode: dsr
-    localRedirectPolicy: true
-    operator:
-      rollOutPods: true
-      replicas: 1
-      prometheus:
-        enabled: true
-        serviceMonitor:
-          enabled: false
-      dashboards:
-        enabled: true
-        annotations:
-          grafana_folder: cilium
-    # prometheus:
-    #   enabled: true
-    #   serviceMonitor:
-    #     enabled: false
-    #     trustCRDsExist: false
-    dashboards:
-      enabled: true
-      annotations:
-        grafana_folder: cilium
-    rollOutCiliumPods: true
-    securityContext:
-      privileged: true
-      capabilities:
-        ciliumAgent:
-          - CHOWN
-          - KILL
-          - NET_ADMIN
-          - NET_RAW
-          - IPC_LOCK
-          - SYS_ADMIN
-          - SYS_RESOURCE
-          - DAC_OVERRIDE
-          - FOWNER
-          - SETGID
-          - SETUID
-        cleanCiliumState:
-          - NET_ADMIN
-          - SYS_ADMIN
-          - SYS_RESOURCE
-    cgroup:
-      autoMount:
-        enabled: true
-      hostRoot: /sys/fs/cgroup
-    k8sServiceHost: api.kluster.klingel.cloud
-    k8sServicePort: "6443"
+  valuesFrom:
+    - kind: ConfigMap
+      name: cilium-helm-values
