--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: cilium
+      chart: *app
       version: 1.16.3
       sourceRef:
         kind: HelmRepository
