Cert-manager: add cluster issuers

--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
@@ -10,9 +10,7 @@ spec:
     # preferredChain: ISRG Root X1
     privateKeySecretRef:
       name: letsencrypt-production
-    # solvers:
-    #   - http01:
-    #     # TODO
-    #     selector:
-    #       dnsZones:
-    #         - "$(SECRET_DOMAIN)"
+    solvers:
+      - http01:
+        ingressClassName: cilium
+        selector: {}
