--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
@@ -9,11 +9,7 @@ spec:
     email: "${SECRET_EMAIL}"
     privateKeySecretRef:
       name: letsencrypt-staging
-    # solvers:
-    #   TODO
-    #   - dns01:
-    #       cloudflare:
-    #         email: "${SECRET_EMAIL}"
-    #     selector:
-    #       dnsZones:
-    #         - "$(SECRET_DOMAIN)"
+    solvers:
+      - http01:
+        ingressClassName: cilium
+        selector: {}
