--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/kustomization.yaml
@@ -3,7 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
-# resources:
-# TODO!
-#   - cluster-issuer-staging.yaml
-#   - cluster-issuer-production.yaml
+resources:
+  - cluster-issuer-staging.yaml
+  - cluster-issuer-production.yaml
