Cert-manager: add cluster issuers

--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
@@ -12,5 +12,6 @@ spec:
       name: letsencrypt-production
     solvers:
       - http01:
-        ingressClassName: cilium
+          ingress:
+            ingressClassName: cilium
         selector: {}
