--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
@@ -11,5 +11,6 @@ spec:
       name: letsencrypt-staging
     solvers:
       - http01:
-        ingressClassName: cilium
+        ingress:
+          ingressClassName: cilium
         selector: {}
