--- a/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
+++ b/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
@@ -7,12 +7,13 @@ metadata:
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:e18KQ5NDxeR85jwD7g==,iv:aSDzymbtn0hKvYLWcyXUoxvTvyoIaniARwIgL1CgPKs=,tag:kI4zjZsiLzc6i6LpvANYsA==,type:str]
-  SECRET_EMAIL: ENC[AES256_GCM,data:nKoPPRj7aonW5k8R1MCQ7B0QVc/16Q==,iv:3BdtWsxNi3XNt1CzgGSzYYXToF4+A39tBH86VO4t2VI=,tag:YT/vbkYhcrZUaDcB4qy6PA==,type:str]
-  SECRET_PUBLIC_SUBNET_IP4: ENC[AES256_GCM,data:Muo9RC98qoPFaLU3cA==,iv:QGgj3Ax+fvwXsOxACpvXv+OiK4Zyza0bMKKkG42vvQ8=,tag:ASpax3fAb4xjLVZb5Nad6g==,type:str]
-  SECRET_PUBLIC_SUBNET_IP6: ENC[AES256_GCM,data:oqn5Ny8KzPY6PjJ2XZSk4ccBaSl+IlofFA==,iv:P5uo11rEj/mZhfB72rMuHIS+XiqBL2dmXkW7jw0qghw=,tag:wv+TvMxFVBvZWAeF+ZArQg==,type:str]
-  SECRET_PUBLIC_IP4: ENC[AES256_GCM,data:5iyotBI8dXa07g==,iv:aTpzNhorw+LXEzddw8szz8hASSgemhAqIZzNUzIC+po=,tag:bzPVklNIrt87QAXt54zHkQ==,type:str]
-  SECRET_PUBLIC_IP6: ENC[AES256_GCM,data:d0IQR0zDtINImNbVR4Wk5k1sQ4dYwA==,iv:nqXjyOr6sXEWgfbmR0dWNsIXdU18xhqVR5mKTdKdM9M=,tag:3nPxT2akxXebPwnadYKkPg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:tuhmXx0/OClggO5oog==,iv:L0XUcEt/YvNVusxpnoHqewDSRiZbQF0ksQTv/7fsZu8=,tag:UFGf2GoCHrimx/awS7A2og==,type:str]
+  SECRET_EMAIL: ENC[AES256_GCM,data:CBQT/XyZ32TP0D/Zf+om7/FQUhMTUA==,iv:419alrxWsmMsyTpxVA0qKUCocyiPL28OtlCTuNde+Mo=,tag:a7PC+ysJCDt5pwQh9OgQAw==,type:str]
+  SECRET_PUBLIC_SUBNET_IP4: ENC[AES256_GCM,data:ElZvOOzRrKq/fYex0w==,iv:DHAhzuc6eTU5EscDMJQq7rgM0+FddC5RmzvWW9DjC+0=,tag:PxDscZSBUbDCWCs0yamjhg==,type:str]
+  SECRET_PUBLIC_SUBNET_IP6: ENC[AES256_GCM,data:aJPQf1Nq9KS+H349qGes/Fyd/nAgm/S/Zw==,iv:v4KXD8UOHXq/J2hm7p0LYlPqEVrT8GCRdfI6/hLc79w=,tag:QkD5EE6pfQmrd/pZi3mFng==,type:str]
+  SECRET_PUBLIC_IP4: ENC[AES256_GCM,data:+ps+wbvpF1z86Q==,iv:RD9xnTNsza+591a7VnHSf8UbAVcarKQn2e8iN8cgZTk=,tag:p9ii1GTc5diusmVClBHh3A==,type:str]
+  SECRET_PUBLIC_IP6: ENC[AES256_GCM,data:aGBSJxkOkwAoXiGfEX96kz/ou0La+A==,iv:BntIyHSdzlAUQ0yTvP5K3oHWZKIGJipfSoNczhlZXc4=,tag:EzP3sopR2wmNzGtw0zsyYA==,type:str]
+  SECRET_TLS_WC: ENC[AES256_GCM,data:fVOKVEXH/hWKKs90eNSQClvUV1w=,iv:s2rUWJ7uGhythL3nN+blimmub0FWMGsG8JPAsuix6iA=,tag:Ltz0ZXDLx5IBL1qk1wngaQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -22,14 +23,14 @@ sops:
     - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFc1JpNzM3SERJWEtYL3F0
-        V2NhTUkvSTY0SVdSckk0T1NwQStva00wSlhZCnFPaHRGaFlaLzN2cEZKRUVCdTM4
-        STZ4bUlMV1JPWXpOdTBJUGlUaG95UjgKLS0tIEg3anlKQlYwSHFtYXNYVUlBMERN
-        Yk4rRzgzS1g2T1BocEU2ZXlMeHdrM0UKcZZu1KhYW95TB4+UGVsMvFM/loKNiYg1
-        dRUi2RTPAxY591OdGgndyEmv9jFmT1rJwf/QY1ulG/9YubN8iwg0+A==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlbUxWS0ZkcThHWjk4b2l5
+        bi9JaXJseUd3YTl6b2FBNWpxVE9JaDBBUTBnCmh5aFRpZUlkVjZjS0ZjRVZSSURM
+        QVVXeXBycWo0V1JxdEltYVI2VnU2S2MKLS0tICszS2FZR1VXK1RGb3NwaGNUeHQ4
+        VXB3SjN5QnNVcHlCK3Yzd09oR1pUbEUKdwei5nnVQpO7ieoKhezN+2TMPykFFT9H
+        s39/2dQM4vI6aeOtwy7poklMw2anfwj+IiWBX+9rhSxnzT1uPDlkvA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2024-09-15T11:57:02Z"
-  mac: ENC[AES256_GCM,data:x++SRCixAjJcKsyO+U5RFSvNTTvk1N840dirlwwkmElInYSTveqPigsT5WOFaU9kWPlzpQOcOzigpJdwlF7/ahxYcGsb3aauPBuETp54wlyLPBLqfBxYVAWEsmOvgpfq1YnM0DPaeLrIuaKVx8aofXhBsbysAGn88Qex8g/FplA=,iv:QvPLOgRq40oAT5dEPCGRMqpcqqjL1pc5UnZDlIm1H6Q=,tag:/hIZyP6PNle5jBKDmxHntg==,type:str]
+  lastmodified: "2024-11-02T17:33:32Z"
+  mac: ENC[AES256_GCM,data:N7qP4Cttm+MRb0jv9oC06X3PbVKT/aL72qzE7Esf0ghuny29qtpbpSHj1cvr8K5zpgCF9x/qbdI6bD1KgQmfKx9xlLpH4i1KBFyhT98EVscoRrrif7le/OR7CJQlyf/njUpcnGEVtWQ7DOFHs5kjCfaoJH98O9lq1mgaAVENNtc=,iv:wJ/ErHdXVQxPZH3/BJcFd29RnCoWbPsP1CIIl6Qqgzo=,tag:n/6COT0D1TJ9ZtJB9CpzNA==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
-  version: 3.9.0
+  version: 3.9.1
