--- a/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/prometheus-values.yaml
+++ b/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/prometheus-values.yaml
@@ -95,91 +95,92 @@ prometheus:
     # podMonitorNamespaceSelector: {}
 
     additionalScrapeConfigs:
+      []
       # ESPHome lights
-      - job_name: esphome-light-alexroom
-        static_configs:
-          - targets:
-              - esphome-light-alexroom.home
-            labels:
-              device: light-alexroom
-      - job_name: esphome-light-stairs
-        static_configs:
-          - targets:
-              - esphome-light-stairs.home
-            labels:
-              device: light-stairs
+      # - job_name: esphome-light-alexroom
+      # static_configs:
+      # - targets:
+      # - esphome-light-alexroom.home
+      # labels:
+      # device: light-alexroom
+      # - job_name: esphome-light-stairs
+      # static_configs:
+      # - targets:
+      # - esphome-light-stairs.home
+      # labels:
+      # device: light-stairs
       # ESPHome sensors
-      - job_name: esphome-sensor-bathroom
-        static_configs:
-          - targets:
-              - esphome-sensor-bathroom.home
-            labels:
-              device: sensor-bathroom
-      - job_name: esphome-sensor-domiroom
-        static_configs:
-          - targets:
-              - esphome-sensor-domiroom.home
-            labels:
-              device: sensor-domiroom
-      - job_name: esphome-sensor-heating
-        static_configs:
-          - targets:
-              - esphome-sensor-heating.home
-            labels:
-              device: sensor-heating
+      # - job_name: esphome-sensor-bathroom
+      # static_configs:
+      # - targets:
+      # - esphome-sensor-bathroom.home
+      # labels:
+      # device: sensor-bathroom
+      # - job_name: esphome-sensor-domiroom
+      # static_configs:
+      # - targets:
+      # - esphome-sensor-domiroom.home
+      # labels:
+      # device: sensor-domiroom
+      # - job_name: esphome-sensor-heating
+      # static_configs:
+      # - targets:
+      # - esphome-sensor-heating.home
+      # labels:
+      # device: sensor-heating
       # ESPHome switches
-      - job_name: esphome-switch-alexroom
-        static_configs:
-          - targets:
-              - esphome-switch-alexroom.home
-            labels:
-              device: switch-alexroom
-      - job_name: esphome-switch-basement
-        static_configs:
-          - targets:
-              - esphome-switch-basement.home
-            labels:
-              device: switch-basement
-      - job_name: esphome-switch-domiroom
-        static_configs:
-          - targets:
-              - esphome-switch-domiroom.home
-            labels:
-              device: switch-domiroom
-      - job_name: esphome-switch-livingroom
-        static_configs:
-          - targets:
-              - esphome-switch-livingroom.home
-            labels:
-              device: switch-livingroom
-      - job_name: esphome-switch-bedroom
-        static_configs:
-          - targets:
-              - esphome-switch-bedroom.home
-            labels:
-              device: switch-bedroom
+      # - job_name: esphome-switch-alexroom
+      # static_configs:
+      # - targets:
+      # - esphome-switch-alexroom.home
+      # labels:
+      # device: switch-alexroom
+      # - job_name: esphome-switch-basement
+      # static_configs:
+      # - targets:
+      # - esphome-switch-basement.home
+      # labels:
+      # device: switch-basement
+      # - job_name: esphome-switch-domiroom
+      # static_configs:
+      # - targets:
+      # - esphome-switch-domiroom.home
+      # labels:
+      # device: switch-domiroom
+      # - job_name: esphome-switch-livingroom
+      # static_configs:
+      # - targets:
+      # - esphome-switch-livingroom.home
+      # labels:
+      # device: switch-livingroom
+      # - job_name: esphome-switch-bedroom
+      # static_configs:
+      # - targets:
+      # - esphome-switch-bedroom.home
+      # labels:
+      # device: switch-bedroom
       # homeassistant
-      - job_name: homeassistant
-        scrape_interval: 60s
-        metrics_path: /api/prometheus
+      # - job_name: homeassistant
+      # scrape_interval: 60s
+      # metrics_path: /api/prometheus
+#
+# Long-Lived Access Token
+# authorization:
+# credentials: ${SECRET_HASS_API_TOKEN}
+#
+# scheme: https
+# static_configs:
+# - targets:
+# - hass.techtales.io
 
-        # Long-Lived Access Token
-        authorization:
-          credentials: ${SECRET_HASS_API_TOKEN}
-
-        scheme: https
-        static_configs:
-          - targets:
-              - hass.techtales.io
-
-      # - job_name: ohm-exporter
-      #   scrape_interval: 15s
-      #   static_configs:
-      #   - targets:
-      #     - red.home:4445
-      #     - carbon.home:4445
-      # - job_name: windows-exporter
-      #   scrape_interval: 15s
-      #   static_configs:
-      #   - targets:
-      #     - red.home:9182
+# - job_name: ohm-exporter
+#   scrape_interval: 15s
+#   static_configs:
+#   - targets:
+#     - red.home:4445
+#     - carbon.home:4445
+# - job_name: windows-exporter
+#   scrape_interval: 15s
+#   static_configs:
+#   - targets:
+#     - red.home:9182
