--- a/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-l2-announcement-policy.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-l2-announcement-policy.yaml
@@ -12,3 +12,6 @@ spec:
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
+  serviceSelector:
+    matchLabels:
+      cloud/public-service: "true"
