Update flux config

--- a/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
+++ b/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
@@ -2,35 +2,35 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cluster-secrets
-  namespace: flux-system
-  labels:
-    kustomize.toolkit.fluxcd.io/prune: disabled
+    name: cluster-secrets
+    namespace: flux-system
+    labels:
+        kustomize.toolkit.fluxcd.io/prune: disabled
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:tuhmXx0/OClggO5oog==,iv:L0XUcEt/YvNVusxpnoHqewDSRiZbQF0ksQTv/7fsZu8=,tag:UFGf2GoCHrimx/awS7A2og==,type:str]
-  SECRET_EMAIL: ENC[AES256_GCM,data:CBQT/XyZ32TP0D/Zf+om7/FQUhMTUA==,iv:419alrxWsmMsyTpxVA0qKUCocyiPL28OtlCTuNde+Mo=,tag:a7PC+ysJCDt5pwQh9OgQAw==,type:str]
-  SECRET_PUBLIC_SUBNET_IP4: ENC[AES256_GCM,data:ElZvOOzRrKq/fYex0w==,iv:DHAhzuc6eTU5EscDMJQq7rgM0+FddC5RmzvWW9DjC+0=,tag:PxDscZSBUbDCWCs0yamjhg==,type:str]
-  SECRET_PUBLIC_SUBNET_IP6: ENC[AES256_GCM,data:aJPQf1Nq9KS+H349qGes/Fyd/nAgm/S/Zw==,iv:v4KXD8UOHXq/J2hm7p0LYlPqEVrT8GCRdfI6/hLc79w=,tag:QkD5EE6pfQmrd/pZi3mFng==,type:str]
-  SECRET_PUBLIC_IP4: ENC[AES256_GCM,data:+ps+wbvpF1z86Q==,iv:RD9xnTNsza+591a7VnHSf8UbAVcarKQn2e8iN8cgZTk=,tag:p9ii1GTc5diusmVClBHh3A==,type:str]
-  SECRET_PUBLIC_IP6: ENC[AES256_GCM,data:aGBSJxkOkwAoXiGfEX96kz/ou0La+A==,iv:BntIyHSdzlAUQ0yTvP5K3oHWZKIGJipfSoNczhlZXc4=,tag:EzP3sopR2wmNzGtw0zsyYA==,type:str]
-  SECRET_TLS_WC: ENC[AES256_GCM,data:fVOKVEXH/hWKKs90eNSQClvUV1w=,iv:s2rUWJ7uGhythL3nN+blimmub0FWMGsG8JPAsuix6iA=,tag:Ltz0ZXDLx5IBL1qk1wngaQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:s7MX1jioaJqDzaUapg==,iv:B58/0XLcf6+NZz8yMJlk9N+cl638oDnwGWnWygnq6v4=,tag:Qko39TjyaU6rqegqg58gDg==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:ISp3inMFgOaqhrPG2JRJlp6nju5Utw==,iv:wv172XCbPQZsnfRGqGGHFQkBs2ORizeoQDqBq+TtF1U=,tag:fGrkK1c3d5KXNlK4KBhDTg==,type:str]
+    SECRET_PUBLIC_SUBNET_IP4: ENC[AES256_GCM,data:HyS7aLKidkmLgMvIog==,iv:LuOx68rA9A+dHs/LPcjg83QgJWLR+tn+xgutU04qQJY=,tag:F5lYIx/zv4FegnnvPluzxA==,type:str]
+    SECRET_PUBLIC_SUBNET_IP6: ENC[AES256_GCM,data:eKnf6NQmelF0omL8eCPMnmEbg8oKVL706Q==,iv:XyKw6f6X4kO0FOSGwgVMtFMhCh6XnT7xOjfOdbGSrXg=,tag:5SglV3iJdMYCuD+aII2z/Q==,type:str]
+    SECRET_PUBLIC_IP4: ENC[AES256_GCM,data:MfZZmfltLsEdfQ==,iv:pag1VpDFaz5DcZWjPJIvXt7JYKMxQMCoz3Wq/gVqdx8=,tag:2Ivf0sGj3CWLe9t8fSaVng==,type:str]
+    SECRET_PUBLIC_IP6: ENC[AES256_GCM,data:FNrGKW/DC0kJ2bDTbQLsq/3S9p0DbA==,iv:DTsvOGquFB/ciu/HRF+UNjHGNEG/wejbCS9cEtcIMLo=,tag:1g1fjytg59q8ptqgeikeQQ==,type:str]
+    SECRET_TLS_WC: ENC[AES256_GCM,data:zzxum6Kp,iv:BynNs9AGXI72hXk+t8Lya5AhiKU0QtlEwhqddJti/Sg=,tag:6fmJg4wZe/nEoH5+86PVyw==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age:
-    - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlbUxWS0ZkcThHWjk4b2l5
-        bi9JaXJseUd3YTl6b2FBNWpxVE9JaDBBUTBnCmh5aFRpZUlkVjZjS0ZjRVZSSURM
-        QVVXeXBycWo0V1JxdEltYVI2VnU2S2MKLS0tICszS2FZR1VXK1RGb3NwaGNUeHQ4
-        VXB3SjN5QnNVcHlCK3Yzd09oR1pUbEUKdwei5nnVQpO7ieoKhezN+2TMPykFFT9H
-        s39/2dQM4vI6aeOtwy7poklMw2anfwj+IiWBX+9rhSxnzT1uPDlkvA==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2024-11-02T17:33:32Z"
-  mac: ENC[AES256_GCM,data:N7qP4Cttm+MRb0jv9oC06X3PbVKT/aL72qzE7Esf0ghuny29qtpbpSHj1cvr8K5zpgCF9x/qbdI6bD1KgQmfKx9xlLpH4i1KBFyhT98EVscoRrrif7le/OR7CJQlyf/njUpcnGEVtWQ7DOFHs5kjCfaoJH98O9lq1mgaAVENNtc=,iv:wJ/ErHdXVQxPZH3/BJcFd29RnCoWbPsP1CIIl6Qqgzo=,tag:n/6COT0D1TJ9ZtJB9CpzNA==,type:str]
-  pgp: []
-  encrypted_regex: ^(data|stringData)$
-  version: 3.9.1
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiK091bEZDY2lXTUtLS3g3
+            WDcrSDZhWVhkTVQ3MFBUSWJFRWdLZUVaRmpJCjBSUkI4aExOWjl6YWlyd1RiYnoy
+            dXZjaFZUcHAzaUlNTXc0WWg2K1F4RVkKLS0tIE1uQ0R6djNTYzg2S25rbUFtT1A2
+            aCtsOE1tRk82NnVYSWt3SHUxd3NPbU0KU9ZIBkmA4mKbiJ6naCwc/wiGlB7J3d79
+            HI/vzDo64QygHNHBLNj3NRDDVL+cHBQhjgKVkgeikmAUBW5NDkvp8w==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-03-15T23:09:30Z"
+    mac: ENC[AES256_GCM,data:QmNfnD4jDaZKyKRNaPaF9TZpKa4ouxWQ0hGQ9B4r8xy9MjD3TgRG7TC4OfP1KsftCAr7g+C/VIAN68j87HAlYK7VsKiC47Q3N1t4cZD7rqZ9vcrYNby1B1PptKv1D5ecATxLicjfz5MJmaqGjEm5+zgQUxGLmtNnwVh1kDG5po4=,iv:FrQcZWA77diMeHlL0GqQv5Vnr22Ez+Ql6vt+hg0kiLY=,tag:pS6ICu4WsM8LZySphvbVew==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.4
