--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
@@ -3,10 +3,13 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-production
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: enabled
+
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: "${SECRET_EMAIL}"
+    email: ${SECRET_EMAIL}
     # preferredChain: ISRG Root X1
     privateKeySecretRef:
       name: letsencrypt-production
