--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/helm-release.yaml
@@ -3,30 +3,26 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cloudnative-pg
+  name: nextcloud
+  namespace: cloud
 spec:
-  interval: 15m
+  interval: 30m
   chart:
     spec:
-      chart: cloudnative-pg
-      version: 0.23.2
+      chart: nextcloud
+      version: 6.6.9
       sourceRef:
         kind: HelmRepository
-        name: cloudnative-pg-charts
+        name: nextcloud-charts
         namespace: flux-system
-  maxHistory: 15
   install:
-    createNamespace: true
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
+      strategy: rollback
       retries: 3
-  values:
-    crds:
-      create: true
-    monitoring:
-      grafanaDashboard:
-        create: true
-      podMonitorEnabled: true
+  valuesFrom:
+    - kind: ConfigMap
+      name: nextcloud-helm-values
