--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -10,31 +10,30 @@ spec:
   primaryUpdateStrategy: unsupervised
   storage:
     size: 30Gi
-    storageClass: ceph-block
   superuserSecret:
     name: postgres-superuser
   monitoring:
     enablePodMonitor: true
 
-  backup:
-    retentionPolicy: 30d
-    # https://cloudnative-pg.io/documentation/current/wal_archiving/
-    barmanObjectStore: &barmanObjectStore
-      data:
-        compression: bzip2
-      wal:
-        compression: bzip2
-        maxParallel: 8
-      destinationPath: s3://cloudnative-pg-backups/
-      endpointURL: https://minio.techtales.io
-      serverName: &clustername postgres16
-      s3Credentials:
-        accessKeyId:
-          name: postgres-minio
-          key: MINIO_ACCESS_KEY
-        secretAccessKey:
-          name: postgres-minio
-          key: MINIO_SECRET_KEY
+  # backup:
+  #   retentionPolicy: 30d
+  #   # https://cloudnative-pg.io/documentation/current/wal_archiving/
+  #   barmanObjectStore: &barmanObjectStore
+  #     data:
+  #       compression: bzip2
+  #     wal:
+  #       compression: bzip2
+  #       maxParallel: 8
+  #     destinationPath: s3://cloudnative-pg-backups/
+  #     endpointURL: https://minio.techtales.io
+  #     serverName: &clustername postgres16
+  #     s3Credentials:
+  #       accessKeyId:
+  #         name: postgres-minio
+  #         key: MINIO_ACCESS_KEY
+  #       secretAccessKey:
+  #         name: postgres-minio
+  #         key: MINIO_SECRET_KEY
 
   # https://cloudnative-pg.io/documentation/current/recovery/#recovery-from-an-object-store
   # bootstrap:
