--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/database-server.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/database-server.yaml
@@ -7,3 +7,12 @@ spec:
   connString: "host=postgres16-rw.database.svc.cluster.local"
   credentials:
     basicAuthSecretRef: postgres-superuser
+---
+apiVersion: dbman.hef.sh/v1alpha2
+kind: DatabaseServer
+metadata:
+  name: postgres15
+spec:
+  connString: "host=postgres15-rw.database.svc.cluster.local"
+  credentials:
+    basicAuthSecretRef: postgres-superuser
