Update environment configuration and pre-commit settings to include parallel execution

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 #shellcheck disable=SC2148,SC2155
-export SOPS_AGE_KEY_FILE="$(pwd)/age.agekey"  
+export SOPS_AGE_KEY_FILE="$(pwd)/age.agekey"
 #$(expand_path ~/.config/sops/age/keys.txt)
 export TALOSCONFIG="$(pwd)/infra/talos/clusterconfig/talosconfig"
+export PRE_COMMIT_PARALLEL=true
