Update Nextcloud values.yam:  fix ipFamilyPolicy

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -546,7 +546,7 @@ service:
   nodePort:
   # -- use additional annotation on service for nextcloud
   annotations: {}
-  ipFamilyPolicy: RequireDualStack
+  ipFamilyPolicy: PreferDualStack
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
