Nextcloud helm chart: fix dualstack for services

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -703,7 +703,7 @@ metrics:
       prometheus.io/scrape: "true"
       prometheus.io/port: "9205"
     labels: {}
-    ipFamilyPolicy: RequireDualStack
+    ipFamilyPolicy: PreferDualStack
 
   # -- security context for the metrics CONTAINER in the pod
   securityContext:
