--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/certificates/wc-tls.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/certificates/wc-tls.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   dnsNames:
     - "*.${SECRET_DOMAIN}"
+    - "${SECRET_DOMAIN}"
   issuerRef:
     group: cert-manager.io
     kind: ClusterIssuer
