--- a/kubernetes/talos-flux/apps/cert-manager/reflector/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/reflector/app/kustomization.yaml
@@ -2,8 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: cert-manager
 resources:
-  - ./namespace.yaml
-  - ./cert-manager/flux-sync.yaml
-  - ./cert-manager-webhook-inwx/flux-sync.yaml
-  - ./reflector/flux-sync.yaml
+  - helm-release.yaml
