--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/kustomization.yaml
@@ -6,3 +6,4 @@ namespace: cert-manager
 resources:
   - cluster-issuer-staging.yaml
   - cluster-issuer-production.yaml
+  - secret-inwx-credentials.sops.yaml
