cert-manager: fix clusterIssuers

--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
@@ -14,6 +14,16 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
+      - http01:
+          ingress:
+            ingressClassName: cilium
+            ingressTemplate:
+              metadata:
+                annotations:
+                  io.cilium/lb-ipam-ip-family: ipv4
+        selector:
+          dnsZones:
+            - "${SECRET_DOMAIN}"
       - dns01:
           webhook:
             groupName: cert-manager-webhook-inwx.smueller18.gitlab.com
@@ -30,3 +40,6 @@ spec:
               otpKeySecretKeyRef:
                 name: inwx-credentials
                 key: otpKey
+        selector:
+          dnsZones:
+            - "${SECRET_DOMAIN}"
