--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-staging.yaml
@@ -16,4 +16,10 @@ spec:
       - http01:
           ingress:
             ingressClassName: cilium
-        selector: {}
+            ingressTemplate:
+              metadata:
+                annotations:
+                  io.cilium/lb-ipam-ip-family: ipv4
+        selector:
+          dnsZones:
+            - "${SECRET_DOMAIN}"
