--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/secret-inwx-credentials.sops.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/secret-inwx-credentials.sops.yaml
@@ -1,30 +1,29 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: inwx-credentials
-  namespace: cert-manager
-stringData:
-  username: ENC[AES256_GCM,data:kdmLrh3k6JM=,iv:6sypD/I2SDsumt+YsFG13pFqFuRb9eCN3TA+z5cs/9s=,tag:dldmlruw9eVGnRo1EPmnzg==,type:str]
-  password: ENC[AES256_GCM,data:52cMn74qEauWkiAwupe/z5Ro+ZM=,iv:XLG83GFxw1STmZZ53NYEbkqDYfRIsNFQ5vtsTOvb8CU=,tag:izB+vbVfZ8aMc/nHXwmySw==,type:str]
-  otpKey: ENC[AES256_GCM,data:/gJSAyDXmMycPoUNRIX0BiNG390NhUVVQc6/cFop7+g=,iv:c1TPXG/kqWsToPmrI/cEUSBXxts6SYElsZxY4FtVV7A=,tag:Kt6IgoxbsV9V1KKPxWtPSA==,type:str]
-type: Opaque
+    name: inwx-credentials
+    namespace: cert-manager
+data:
+    username: ENC[AES256_GCM,data:gbRSwAmixhWjK8c8,iv:R0NdjHIj1L/F5zIDMz0NjXb2jHw3tWv6ehK/ER+fRi8=,tag:NB5cYWHypYhdBn1vIUk7Aw==,type:str]
+    password: ENC[AES256_GCM,data:WLCgg/TY5F9gKNFY5i+YxVS8PMBvHS1LfDEURQ==,iv:H6Xu+FTM8VXieEWc7j87Su06kQwA8C1h+6PQIyN6LOo=,tag:juu5/pnk3IwjFIZdpMhqew==,type:str]
+    otpKey: ENC[AES256_GCM,data:mmkFTqS19i9DF6q8fMFjVonjkhe+eCWjL4NA1EorLiE=,iv:7A2AxDX1eiWXVbAyU8moICUMGd8sRctN8KJ/CBJNw4k=,tag:qdPdUzMUTHkIUs4tUeNlww==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age:
-    - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSDJGVEZPVisrK2RadUhz
-        ekMxZVpQTnRMa2QwbVQrcUJVcU9jR21LWFFZCkZjN25pVjhuSURZeTNMWWloczlU
-        WmlzMHhuVWFYQ2ZoN09pK2lhY1VkMlUKLS0tIHc3WWJ1VkpCV2I0VFVGc2RYemtq
-        em8xM0lta2t0dlo1R09VZG1yUDRBOEUKCgbOJdWWt4VgingkqhBRGePU31mp2yV+
-        fxmtYKfg2KJLD4JFPxFoWCGkrdcgWM/2htWdouBxqkzSF02G0mT9+w==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-03-17T13:43:09Z"
-  mac: ENC[AES256_GCM,data:cAOryoG8y9tuzjKzA9YlE3ujAaHn7AO33t2jGZSC4jfC2IrfxXBtGBQhJPqCO0XizV4HrYWkejfxTP99X2Tau/WIO77cJ3P0jRm1f3JPtkXRNkUfnJVq4qWO58gi+xEx3r48+Bahxq60lN2wrG1vmRTH+TXMbPAEN4vbstUWPQ4=,iv:cwTJB25YYhMXeeULo/2Nb9V+RQR5YvV66YNIgE6ZFrQ=,tag:aLM/imTwdTziWMTl0Z2/MQ==,type:str]
-  pgp: []
-  encrypted_regex: ^(data|stringData)$
-  version: 3.9.4
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSDJGVEZPVisrK2RadUhz
+            ekMxZVpQTnRMa2QwbVQrcUJVcU9jR21LWFFZCkZjN25pVjhuSURZeTNMWWloczlU
+            WmlzMHhuVWFYQ2ZoN09pK2lhY1VkMlUKLS0tIHc3WWJ1VkpCV2I0VFVGc2RYemtq
+            em8xM0lta2t0dlo1R09VZG1yUDRBOEUKCgbOJdWWt4VgingkqhBRGePU31mp2yV+
+            fxmtYKfg2KJLD4JFPxFoWCGkrdcgWM/2htWdouBxqkzSF02G0mT9+w==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-03-17T15:26:54Z"
+    mac: ENC[AES256_GCM,data:+bKPjHqEvogX+a8t2sCvutU//TMRZHQxq3e+2Qp11xFluZpsCAVZuilB72EmbcWqYo3yxkUQ3Sc4t+l8crGhsiLXydRk5MZjeUTq73anVgK4X0uN4xWshsCYPnWGaOSm9otVutYPDECG/GOaaoBVQD3yQRf4EItVZHWJerkhGz8=,iv:7H9fdTRkgAnjkpJa9N1HYb3mT2YD0y53Ghmqd3eYBag=,tag:ZqK9To8a4QOTEdn6IpTBjA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.4
