--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/secret-inwx-credentials.sops.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/secret-inwx-credentials.sops.yaml
@@ -3,10 +3,10 @@ kind: Secret
 metadata:
     name: inwx-credentials
     namespace: cert-manager
-data:
-    username: ENC[AES256_GCM,data:gbRSwAmixhWjK8c8,iv:R0NdjHIj1L/F5zIDMz0NjXb2jHw3tWv6ehK/ER+fRi8=,tag:NB5cYWHypYhdBn1vIUk7Aw==,type:str]
-    password: ENC[AES256_GCM,data:WLCgg/TY5F9gKNFY5i+YxVS8PMBvHS1LfDEURQ==,iv:H6Xu+FTM8VXieEWc7j87Su06kQwA8C1h+6PQIyN6LOo=,tag:juu5/pnk3IwjFIZdpMhqew==,type:str]
-    otpKey: ENC[AES256_GCM,data:mmkFTqS19i9DF6q8fMFjVonjkhe+eCWjL4NA1EorLiE=,iv:7A2AxDX1eiWXVbAyU8moICUMGd8sRctN8KJ/CBJNw4k=,tag:qdPdUzMUTHkIUs4tUeNlww==,type:str]
+stringData:
+    username: ENC[AES256_GCM,data:09aasx2f9ow=,iv:dq9gSvP6mMx9Bz1wJEtJOaVks4x1XLmiVc4Eujki8sE=,tag:LpUs9kZ/0DhxZk4r9pAPGA==,type:str]
+    password: ENC[AES256_GCM,data:dFsb3x7hleB+1TiApe3zDh0uF7rU8w==,iv:DF9PNhf0HUOqJt8TtpnQQPn0L3L1A1NDxzdVdobb+5I=,tag:LqZHY7NXwEMIpRViBuH+cw==,type:str]
+    otpKey: ENC[AES256_GCM,data:kpDzg0Q5GpQh4fuFJnDf95k9y7iYgpSRohzDqLGWPFM=,iv:A3efWvO6wekG4YDGPgAO0iDHL9o13xt5z1LxVvlKQ8Y=,tag:jtXSqmLEPxHBnrZjCVxEzw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             em8xM0lta2t0dlo1R09VZG1yUDRBOEUKCgbOJdWWt4VgingkqhBRGePU31mp2yV+
             fxmtYKfg2KJLD4JFPxFoWCGkrdcgWM/2htWdouBxqkzSF02G0mT9+w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-17T15:26:54Z"
-    mac: ENC[AES256_GCM,data:+bKPjHqEvogX+a8t2sCvutU//TMRZHQxq3e+2Qp11xFluZpsCAVZuilB72EmbcWqYo3yxkUQ3Sc4t+l8crGhsiLXydRk5MZjeUTq73anVgK4X0uN4xWshsCYPnWGaOSm9otVutYPDECG/GOaaoBVQD3yQRf4EItVZHWJerkhGz8=,iv:7H9fdTRkgAnjkpJa9N1HYb3mT2YD0y53Ghmqd3eYBag=,tag:ZqK9To8a4QOTEdn6IpTBjA==,type:str]
+    lastmodified: "2025-03-17T16:14:07Z"
+    mac: ENC[AES256_GCM,data:eTTDsM/1Low9xYTDuEOweuMAN7FQHMSTtZq72oGa9gYh0iVEHtdixKcTnRXlhn7s4thOzZmjtoBboCXk4fhc59Za1VcornuVCUwxlpHf0L5lYJlOJkKVBagJiGVC2tjiLeD6ECVAR0/uNWM9lG2h4oLmrBtH1xfJEo2JtYGxOZE=,iv:27+VEl+Z1sdM4LhEqe9A/wlJGyfGLxTRY3jH+QFDjSc=,tag:CCuC9LCUuY3uvaKOx68D7g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
