Update cert-manager configurations to change DNS recursive nameservers and switch from http01 to dns01 solver with updated credentials

--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/issuers/cluster-issuer-production.yaml
@@ -14,13 +14,22 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
-      - http01:
-          ingress:
-            ingressClassName: cilium
-            ingressTemplate:
-              metadata:
-                annotations:
-                  io.cilium/lb-ipam-ip-family: ipv4
-        selector:
-          dnsZones:
-            - "${SECRET_DOMAIN}"
+      - dns01:
+          webhook:
+            groupName: cert-manager-webhook-inwx.smueller18.gitlab.com
+            solverName: inwx
+            config:
+              ttl: 300 # default 300
+              sandbox: false # default false
+              usernameSecretKeyRef:
+                name: inwx-credentials
+                key: username
+              passwordSecretKeyRef:
+                name: inwx-credentials
+                key: password
+              otpKeySecretKeyRef:
+                name: inwx-credentials
+                key: otpKey
+          selector:
+            dnsZones:
+              - "${SECRET_DOMAIN}"
