--- a/kubernetes/talos-flux/apps/cert-manager/cert-manager/certificates/wc-tls.yaml
+++ b/kubernetes/talos-flux/apps/cert-manager/cert-manager/certificates/wc-tls.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     kustomize.toolkit.fluxcd.io/substitute: enabled
     reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+    reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
 
 spec:
   dnsNames:
@@ -23,3 +24,4 @@ spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
