--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,6 @@ repos:
       - id: check-json
       - id: check-symlinks
       - id: check-xml
-      - id: detect-aws-credentials
         args:
           - --allow-missing-credentials
       - id: detect-private-key
@@ -67,6 +66,7 @@ repos:
         args:
           - -c
           - .yamllint.yaml
+        files: \.ya?ml$
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
@@ -88,6 +88,7 @@ repos:
         args:
           - --config
           - .markdownlint.yaml
+        files: \.md$
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
